Added another button

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <button id="button1">CLICK ME</button>
     <button id="button2">POKE ME</button>
     <button id="button3">TOUCH ME</button>
+    <button id="button4">HOVER ME</button>
 </body>
 </html>
