practice making card

--- a/index.html
+++ b/index.html
@@ -6,13 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <title>Button Practice</title>
 </head>
 <body>
-    <button id="button1">CLICK ME</button>
-    <button id="button2">POKE ME</button>
-    <button id="button3">TOUCH ME</button>
-    <button id="button4">HOVER ME</button>
+    <div id="buttoncontainer">
+        <button id="button1">CLICK ME</button>
+        <button id="button2">POKE ME</button>
+        <button id="button3">TOUCH ME</button>
+        <button id="button4">HOVER ME</button>
+    </div>>
+    <div id="cardcontainer">
+        <div id="card">
+            <div id="background">
+                <h1>MTG API Card Game</h1>
+                <span>
+                    This game provides the user with random Magic:
+                    The Gathering cards to try and match.
+                    Card data provided by MTG API.
+                </span>
+            </div>
+        </div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
