Added test card preview effect

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
         </div>
     </div>
     <div id="testcontainer">
-        
+        <div class="example">
+            <div class="image"></div>
+            <div id="exampleText">
+                <h4>Title Name</h4>
+                <a href="">Visit repository here!</a>
+            </div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
