--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="button2">POKE ME</button>
         <button id="button3">TOUCH ME</button>
         <button id="button4">HOVER ME</button>
+        <button id="button5">CLICK ME</button>
     </div>>
     <div id="cardcontainer">
         <div id="card">
