--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="button3">TOUCH ME</button>
         <button id="button4">HOVER ME</button>
         <button id="button5">CLICK ME</button>
+        <button id="button6">TOUCH ME</button>
     </div>>
     <div id="cardcontainer">
         <div id="card">
