--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             </div>
         </div>
     </div>
+    <div id="textcontainer">
+        <h2 id="header1">Input Text Practice</h2>
+        <input id="newinput" type="text">
+        <div id="inputtext">Input your password here</div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
